# cutecosmic

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  check.yml
bindings/: CMakeLists.txt  Cargo.toml  build.rs
bindings/src/: lib.rs  theme.rs  watcher.rs
platformtheme/: CMakeLists.txt  cosmic.json  cutecosmiccolormanager.cpp  cutecosmiccolormanager.h  cutecosmicfiledialog.cpp  cutecosmicfiledialog.h  cutecosmiciconengine.cpp  cutecosmiciconengine.h  cutecosmictheme.cpp  cutecosmictheme.h  cutecosmicwatcher.cpp  cutecosmicwatcher.h  main.cpp
