[package]
name = "bindings"
edition = "2024"
publish = false

[lib]
crate-type = ["staticlib"]

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic", rev = "5187dd6", default-features = false }
iced_futures = { git = "https://github.com/pop-os/libcosmic", rev = "5187dd6" }
cosmic-settings-daemon = { git = "https://github.com/pop-os/dbus-settings-bindings" }
atomic_refcell = "0.1.13"

[build-dependencies]
cbindgen = "0.29"

[profile.release]
opt-level = 3
panic = "abort"
